--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </service>
+
+        <service android:name="com.example.thinkpad.t47checklisthead.MessageService"
+            android:process=":remote"/>
+
     </application>
 
 </manifest>
