finish side menu,now it works

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.application'
 
+repositories{
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -42,5 +48,6 @@ dependencies {
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-design:2.0.0'
     compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.0.0'
+    compile 'com.github.ozodrukh:CircularReveal:1.0.4'
     implementation project(':library')
 }
