--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.thinkpad.t47checklisthead">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
 
     <application
         android:allowBackup="true"
@@ -26,8 +29,7 @@
         <activity
             android:name=".ItemListActivity"
             android:label="@string/title_item_list"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".ItemDetailActivity"
             android:label="@string/title_item_detail"
@@ -37,11 +39,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.thinkpad.t47checklisthead.ItemListActivity" />
         </activity>
-        <activity android:name=".activity.SoundRecoderActivity"
+        <activity
+            android:name=".activity.SoundRecoderActivity"
             android:label="record">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
