--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.thinkpad.t47checklisthead">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,9 +9,10 @@
 
 
     <application
+        tools:replace="android:label"
         android:allowBackup="true"
-        android:icon="@drawable/ic_posture"
-        android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
+        android:label="wronglabel"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
