--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,13 @@
     <application
         tools:replace="android:label"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="wronglabel"
+        android:icon="${app_icon}"
+        android:label="${app_name}"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="姿态识别"
             android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
