--- a/app/src/app2/AndroidManifest.xml
+++ b/app/src/app2/AndroidManifest.xml
@@ -2,24 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.thinkpad.t47checklisthead">
 
-    <permission android:name="com.abc.permission.GET_DATA"/>
-    <uses-permission android:name="com.abc.permission.GET_DATA"/>
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver
-            android:name="com.example.thinkpad.t47checklisthead.MyReceiver"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="com.abc.permission.GET_DATA"
-            >
+        <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="com.abc.mydata"></action>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".MyBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="github.nisrulz.action.MY_ACTION"/>
             </intent-filter>
         </receiver>
     </application>
