--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,20 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoCoreVer"
 
     implementation "com.android.support:appcompat-v7:$supportLibVer"
+
+    //rx
+    //retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+//rx+retrofit
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+//rxjava
+    compile "io.reactivex.rxjava2:rxjava:2.0.8"
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//rxbinding
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding-design:2.0.0'
+    compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.0.0'
 }
