--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,19 +39,17 @@ dependencies {
 
     implementation "com.android.support:appcompat-v7:$supportLibVer"
 
-    //rx
-    //retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.2.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
-//rx+retrofit
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-//rxjava
-    compile "io.reactivex.rxjava2:rxjava:2.0.8"
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-//rxbinding
-    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'com.jakewharton.rxbinding2:rxbinding-support-v4:2.0.0'
-    compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
-    compile 'com.jakewharton.rxbinding2:rxbinding-design:2.0.0'
-    compile 'com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:2.0.0'
 }
+task clearJar(type: Delete) {
+    delete 'libs/dynamic.jar'
+}
+
+task makeJar(type: org.gradle.api.tasks.bundling.Jar) {
+    baseName 'dynamic'
+    from('build/intermediates/classes/debug/com/example/thinkpad/t47checklisthead/dynamic/')
+    into('com/example/thinkpad/t47checklisthead/dynamic/')
+    exclude('test/', 'Dynamic.class', 'BuildConfig.class', 'FallMonitorAidl.class', 'IUser.class', 'R.class')
+    exclude{it.name.startsWith('R$');}
+
+}
+makeJar.dependsOn(clearJar, build)
