--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,14 @@
             android:name=".MainActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait">
-
-
-        </activity>
-        <activity android:name=".rx.RxDemoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity android:name=".rx.RxDemoActivity">
+
         </activity>
 
         <activity
@@ -35,6 +35,7 @@
             android:label="record">
 
         </activity>
+        <service android:name=".MainService"/>
     </application>
 
 </manifest>
